[tool.poetry]
name = "dating-recommendor"
version = "0.1.0"
description = ""
authors = ["amir <khakshour.amir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask_restful = "^0.3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
